--- a/gists/2020-02-25-trial.tex
+++ b/gists/2020-02-25-trial.tex
@@ -1,7 +1,18 @@
 ---
-title: trial
+title: Trial
 ---
 
+\documentclass[10pt]{article}
+
+\usepackage{stmaryrd}
+\usepackage{amsthm}
+\usepackage{bbold}
+
 \begin{document}
-Hello $1+\int e^x$
+Hello 
+$$1+\int e^x \mapsto 1$$ 
+$\mathbb{N}$
+\begin{proof}
+asjhslkdfjh.
+\end{proof}
 \end{document}
