--- a/posts/2015-08-12-spqr.markdown
+++ b/posts/2015-08-12-spqr.markdown
@@ -1,5 +1,6 @@
 ---
 title: S.P.Q.R.
+tags: foo, bar
 ---
 
 Mauris in lorem nisl. Maecenas tempus facilisis ante, eget viverra nisl
@@ -16,6 +17,7 @@ eget tellus sodales lobortis. Sed tempor, urna vel pulvinar faucibus, lectus
 urna vehicula ante, at facilisis dolor odio at lorem. Morbi vehicula euismod
 urna, et imperdiet urna ornare vitae.
 
+<!--more-->
 Sed tincidunt sollicitudin ultrices. In hac habitasse platea dictumst. Morbi
 ligula lectus, egestas at ultricies nec, fringilla et tellus. Duis urna lorem,
 bibendum a ornare sed, euismod sed nunc. Aliquam tempor massa at velit fringilla
