--- a/posts/2015-12-07-tu-quoque.markdown
+++ b/posts/2015-12-07-tu-quoque.markdown
@@ -1,6 +1,7 @@
 ---
 title: Tu Quoque
 author: Julius
+tags: foo
 ---
 
 Vestibulum leo turpis, dignissim quis ultrices sit amet, iaculis ac ligula.
@@ -17,6 +18,7 @@ egestas nulla convallis. Aliquam vel ullamcorper risus. Fusce dictum, massa id
 consequat viverra, nulla ante tristique est, a faucibus nisi enim nec dui. Donec
 metus ligula, condimentum at porttitor eget, lobortis at quam.
 
+<!--more-->
 Aenean vel libero in magna ultricies congue in a odio. Donec faucibus rutrum
 ornare. Fusce dictum eleifend fermentum. Vestibulum vel nibh a metus porttitor
 rhoncus. Pellentesque id quam neque, eget molestie arcu. Integer in elit vel
