--- a/posts/2015-08-12-spqr.markdown
+++ b/posts/2015-08-12-spqr.markdown
@@ -3,19 +3,13 @@ title: S.P.Q.R.
 tags: foo, bar
 ---
 
-Mauris in lorem nisl. Maecenas tempus facilisis ante, eget viverra nisl
-tincidunt et. Donec turpis lectus, mattis ac malesuada a, accumsan eu libero.
-Morbi condimentum, tortor et tincidunt ullamcorper, sem quam pretium nulla, id
-convallis lectus libero nec turpis. Proin dapibus nisi id est sodales nec
-ultrices tortor pellentesque. Vivamus vel nisi ac lacus sollicitudin vulputate
-ac ut ligula. Nullam feugiat risus eget eros gravida in molestie sapien euismod.
-Nunc sed hendrerit orci. Nulla mollis consequat lorem ac blandit. Ut et turpis
-mauris. Nulla est odio, posuere id ullamcorper sit amet, tincidunt vel justo.
-Curabitur placerat tincidunt varius. Nulla vulputate, ipsum eu consectetur
-mollis, dui nibh aliquam neque, at ultricies leo ligula et arcu. Proin et mi
-eget tellus sodales lobortis. Sed tempor, urna vel pulvinar faucibus, lectus
-urna vehicula ante, at facilisis dolor odio at lorem. Morbi vehicula euismod
-urna, et imperdiet urna ornare vitae.
+asad $1+4$ \\(1+1\\)
+\\begin{aligned}
+1&=1 \\\\
+2&=2 \\\\
+\\mathbb{N} &\\rightarrow \\Omega
+\\end{aligned}
+
 
 <!--more-->
 Sed tincidunt sollicitudin ultrices. In hac habitasse platea dictumst. Morbi
