updated post tags

--- a/posts/2023-06-07-CohP1.markdown
+++ b/posts/2023-06-07-CohP1.markdown
@@ -2,7 +2,7 @@
 title: Splitting on the line
 author: Parth
 date: 6 June 2023
-tags: algebraic geometry
+tags: geometry
 ---
 
 <div class="teaser">
