added latex preamble to site build, added post

--- a/posts/2023-06-07-CohP1.markdown
+++ b/posts/2023-06-07-CohP1.markdown
@@ -6,13 +6,13 @@ tags: geometry
 ---
 
 <div class="teaser">
-Grothendieck proved any algebraic vector bundle on $\mathbb{P}^1$ splits into a direct sum of line bundles, and consequently any coherent sheaf on the variety is a direct sum of line bundles and torsion sheaves. This behaviour, and its ramifications on the derived category, exhibit how $\mathbb{P}^1$ is very close to a principal ideal domain. The results above can be proven with as much or as little machinery as one desires-- indeed one can take the point of view that this classification of coherent sheaves is a mere consequence of existence of Jordan normal forms of matrices. In this article however we look at a more cohomological proof, showing how Serre duality shines in these situations.
+Grothendieck proved any algebraic vector bundle on $\bbP^1$ splits into a direct sum of line bundles, and consequently any coherent sheaf on the variety is a direct sum of line bundles and torsion sheaves. This behaviour, and its ramifications on the derived category, exhibit how $\mathbb{P}^1$ is very close to a principal ideal domain. The results above can be proven with as much or as little machinery as one desires-- indeed one can take the point of view that this classification of coherent sheaves is a mere consequence of existence of Jordan normal forms of matrices. In this article however we look at a more cohomological proof, showing how Serre duality shines in these situations.
 </div>
 <!--more-->
 
 # Serre's twisting sheaves
 
-We start with a quick recap of divisors on the projective line-- recall that Serre characterises quasicoherent sheaves on $\mathbb{P}^1$ as coming from graded modules over the homogeneous coordinate ring $S=k[x,y]$ via a construction akin to the $\text{Proj}$ construction. Explicitly, given a graded $S$-module $M$, the corresponding sheaf is given on the distinguished open $U_f$ corresponding to a homogeneous element $f\in S$ by the degree $0$ part of $M\otimes_S S[\frac{1}{f}]$. Thus for instance writing $S(n)$ for the graded module given in degree $k$ by $S_{n+k}$, we see that the corresponding sheaf $\mathscr{O}(n)$ is given on $U_y=\mathbb{P}^1\setminus \{\infty\}$ by $y^nk[\frac{x}{y}]$ so that it has global sections given by degree $n$ homogeneous polynomials in $S$. These are evidently locally free of rank $1$, and we have a sequence $...\mathscr{O}(-1),\mathscr{O},\mathscr{O}(1),...$ of line bundles called _Serre's twisting sheaves._ These are so named because any sheaf $\mathscr{F}\in \text{QCoh}\mathbb{P}^1$ can be twisted to obtain a new sheaf $\mathscr{F}(n)=\mathscr{F}\otimes\mathscr{O}(n)$. The notation is consistent in that the structure sheaf $\mathscr{O}$ is $\mathscr{O}(0)$, and $\mathscr{O}(m)\otimes \mathscr{O}(n)=\mathscr{O}(m+n)$ by noting that the functor sending a graded $S$-module to the corresponding sheaf of $\mathscr{O}$-modules is monoidal.
+We start with a quick recap of divisors on the projective line-- recall that Serre characterises quasicoherent sheaves on $\bbP^1$ as coming from graded modules over the homogeneous coordinate ring $S=k[x,y]$ via a construction akin to the $\text{Proj}$ construction. Explicitly, given a graded $S$-module $M$, the corresponding sheaf is given on the distinguished open $U_f$ corresponding to a homogeneous element $f\in S$ by the degree $0$ part of $M\otimes_S S[\frac{1}{f}]$. Thus for instance writing $S(n)$ for the graded module given in degree $k$ by $S_{n+k}$, we see that the corresponding sheaf $\mathscr{O}(n)$ is given on $U_y=\mathbb{P}^1\setminus \{\infty\}$ by $y^nk[\frac{x}{y}]$ so that it has global sections given by degree $n$ homogeneous polynomials in $S$. These are evidently locally free of rank $1$, and we have a sequence $...\mathscr{O}(-1),\mathscr{O},\mathscr{O}(1),...$ of line bundles called _Serre's twisting sheaves._ These are so named because any sheaf $\mathscr{F}\in \text{QCoh}\mathbb{P}^1$ can be twisted to obtain a new sheaf $\mathscr{F}(n)=\mathscr{F}\otimes\mathscr{O}(n)$. The notation is consistent in that the structure sheaf $\mathscr{O}$ is $\mathscr{O}(0)$, and $\mathscr{O}(m)\otimes \mathscr{O}(n)=\mathscr{O}(m+n)$ by noting that the functor sending a graded $S$-module to the corresponding sheaf of $\mathscr{O}$-modules is monoidal.
 
 $\mathbb{P}^1$ is a smooth integral variety, in particular the total quotient ring $\mathscr{K}$ is the constant sheaf given by the function field (i.e. the stalk of $\mathscr{O}$ at the generic point) $k(x,y)$. The sheaf $\mathscr{K}$ is quasicoherent, coming from the graded $S$-module $K=k[x,y]\cdot k(\frac{x}{y})$ which can be seen as the subring of $k(x,y)$ containing rational functions with homogeneous denominators. Now any line bundle on $\mathbb{P}^1$ embeds into $\mathscr{K}$ (and such embeddings are in bijection with rational sections of the bundle); and by definition a Cartier divisor is a rank $1$ locally free subsheaf of $\mathscr{K}$. For instance any homogeneous element $f\in K_n$ defines an injection $S(-n)\hookrightarrow K$ given by $1\mapsto f$ and hence an injection $\mathscr{O}(-n)\hookrightarrow \mathscr{K}$ corresponding to the rational section $\frac{1}{f}$. We write $\mathscr{O}(-D)$ for the image of this injection where $D$ is the divisor of zeros and poles of $f$; this is consistent with the standard correspondence between Weil and Cartier divisors on a smooth variety where an effective Weil divisor $D$ has ideal sheaf $\mathscr{O}(-D)\subset \mathscr{O}$ which happens to be locally free (hence a Cartier divisor.) Given a Weil divisor $D$ it is rather straightforward to describe a homogeneous element $f\in K$ with zeros and poles given by $-D$, so that $\mathscr{O}(D)$ must as a line bundle be isomorphic to the twisting sheaf $\mathscr{O}(\text{deg}D)$. It follows that $\{\mathscr{O}(n)\;|\; n\in \mathbb{Z}\}$ are all the line bundles (up to isomorphism) on $\mathbb{P}^1$, and the Picard group is isomorphic to $\mathbb{Z}$.
 
